[package]
name = "pad_left"
version = "0.1.0"
description = "A simple library to left pad a string with a given character up to a certain length."
license = "Apache-2.0"
keywords = ["left_pad", "pad", "padding", "rust"]
repository = "https://github.com/wiseaidev/pad-left"
documentation = "https://docs.rs/pad_left/"
authors = ["Mahmoud Harmouch <business@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
doctest = true
test = true